--- a/styles/main.css
+++ b/styles/main.css
@@ -32,13 +32,14 @@ header {
 }
 
 .title {
+    font-family: 'Lobster', cursive;
+    font-family: 'Rubik', sans-serif;
+    font-family: 'Pacifico', cursive;
     font-size: 40px;
     float: left;
     margin: 0;
     margin-left: 10%;
-    font-family: 'Lobster', cursive;
-    font-family: 'Rubik', sans-serif;
-    font-family: 'Pacifico', cursive;
+    text-shadow: 0 0 3px rgba(255, 74, 12,1);
 }
 
 .header-nav {
@@ -77,7 +78,7 @@ header {
 
 #explore-btn {
     display: block;
-    background: rgba(93, 64, 55, 0.8);
+    background: rgba(255, 74, 12, 0.8);
     color: white;
     font-size: 20px;
     text-decoration: none;
@@ -87,6 +88,10 @@ header {
     margin: 20px auto;
     border: none;
     transition: all 0.5s ease;
+}
+
+#xplore-btn:hover {
+    background: rgba(0, 178, 138, 0.8);
 }
 
 
@@ -264,7 +269,7 @@ form.search-form.fixed-search-bar {
 
     .header-nav li:hover {
         border-bottom: 2px solid white;
-        border-bottom-color: rgba(255,255,255,0.6);
+        border-bottom-color: rgba(0,178,138,0.6);
     }
 
     .header-nav a {
@@ -274,6 +279,7 @@ form.search-form.fixed-search-bar {
 
     #explore-btn:hover {
         background: rgba(64, 44, 38, 0.9);
+        background: rgba(0, 178, 138, 0.8);
         cursor: pointer;
 
         -webkit-transition: background 0.1s ease-in-out;
@@ -302,7 +308,7 @@ form.search-form.fixed-search-bar {
         background: rgba(0,0,0,0.7);
         box-shadow: 0 5px 10px rgba(0,0,0,0.4);
         width: 100%;
-        height: 70px;
+        height: 80px;
         transition: all 0.8s ease;
     }
 
@@ -311,11 +317,35 @@ form.search-form.fixed-search-bar {
         position: absolute;
         top: 0;
         left: 50%;
-        margin-left: -30%;
-        width: 60%;
+        transform: translateX(-50%);
+        width: 80%;
         min-width: 700px;
         padding: 40px;
         text-align: center;
+    }
+
+    .filter {
+        display: inline-block;
+        text-align: left;
+    }
+
+    .filter span {
+        display: block;
+    }
+
+    #browse-videos-span,
+    #search-results-span {
+        padding-left: 15px;
+        height: 80px;
+        line-height: 80px;
+    }
+
+    #search-results-span.hidden {
+        display: none;
+    }
+
+    #browse-videos-span.hidden {
+        display: none;
     }
 
     #query-label {
@@ -329,15 +359,16 @@ form.search-form.fixed-search-bar {
     }
 
     #query {
-        width: 80%;
+        width: 50%;
         height: 50px;
         line-height: 50px;
         text-align: center;
         font-size: 24px;
+        vertical-align: top;
     }
 
     #search-btn {
-        background: rgba(93, 64, 55, 0.9);
+        background: rgba(255, 74, 12, 0.9);
         color: white;
         width: 100px;
         height: 50px;
@@ -349,7 +380,8 @@ form.search-form.fixed-search-bar {
     }
 
     #search-btn:hover {
-        background: rgba(129, 88, 75, 0.8);
+        background: rgba(0, 178, 138, 0.8);
+        cursor: pointer;
     }
 
     /* * * * * * Results (Desktop) * * * * * */
@@ -370,19 +402,37 @@ form.search-form.fixed-search-bar {
         margin-bottom: 10px;
     }
 
-    .results img {
-        /*float: left;
-        margin-left: 1.5%;
-        margin-bottom: 10px;*/
-        transition: all 0.3s ease;
+    .results div {
+        transition: all 0.2s ease;
     }
 
-    .results img:hover {
+    .results div:hover {
         box-shadow: 0 0 20px 2px rgba(255,255,255,0.5);
     }
 
     .video-thumbnail {
         max-height: 180px;
+    }
+
+    .page-controls-container {
+        clear: both;
+
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    #next-page-btn {
+        margin-left: 10px;
+    }
+
+    #prev-page-btn {
+        margin-right: 10px
+    }
+
+
+    #next-page-btn:hover,
+    #prev-page-btn:hover {
+        cursor: pointer;
     }
 
 
@@ -401,6 +451,11 @@ form.search-form.fixed-search-bar {
     .lightbox {
         color: rgba(217, 176, 140, 0.9);
         color: rgba(97, 137, 47, 1);
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
     }
 
     .frame-container {
@@ -409,22 +464,30 @@ form.search-form.fixed-search-bar {
         background: rgba(209, 232, 226, 0.6);
         background: rgba(17, 100, 102, 0.6);
 
-        /*background: rgba(97, 137, 47, 0.6);*/
-        /*background: rgba(134, 194, 50, 0.6);*/
-        /*background: rgba(71, 75, 79, 0.6);*/
-        /*background: rgba(107, 110, 112, 0.6);*/
-
         background: rgba(34, 38, 41, 0.9);
-        position: fixed;
-        top: 40%;
+        position: absolute;
+        top: 10px;
         left: 50%;
+        transform: translateX(-50%);
         width: 80%;
-        min-width: 800px;
-        /*height: 500px;*/
-        margin-left: -40%;
-        margin-top: -250px;
-        border: 2px solid white;
+        min-width: 945px;
+        border: 2px solid rgba(107, 110, 112, 0.2);
         z-index: 2;
+    }
+
+    .wide {
+        width: 1028px;
+    }
+
+    #frame-wrap {
+        position: relative;
+        display: inline-block;
+    }
+
+     #frame {
+        width: 640px;
+        height: 360px;
+        border: none;
     }
 
     label[for="times"] {
@@ -437,9 +500,12 @@ form.search-form.fixed-search-bar {
     }
 
     .video-info {
+        /*position: relative;*/
         float: left;
-        width: 25%;
+        width: 20%;
+        /*height: 380px;*/
         text-align: left;
+        padding: 10px;
         border: 1px solid white;
     }
 
@@ -451,37 +517,84 @@ form.search-form.fixed-search-bar {
         color: inherit;
         text-decoration: none;
     }
+
+    .published-date {
+        margin-top: 5px;
+    }
     
+    #enlarge {
+        position: absolute;
+        bottom: 10px;
+        right: -24px;
+    }
+
+    i#enlarge.hidden {
+        display: none;
+    }
+
+    label[for="enlarge"],
+    label[for="minimize"] {
+        color: rgba(71, 75, 79, 1);
+        position: absolute;
+        font-size: 12px;
+    }
+
+    label[for="enlarge"] {
+        bottom: -15px;
+        right: -20px;
+    }
+
+    label[for="minimize"] {
+        bottom: -15px;
+        right: 0;
+    }
+
+    #minimize {
+        color: rgba(97, 137, 47, 1);
+        font-size: 15px;
+        margin: 0 5px;
+    }
+
+
+    i.fa.fa-long-arrow-up {
+        font-size: 13px;
+        margin-left: 5px;
+    }
+
+    i.fa.fa-long-arrow-right {
+        font-size: 15px;
+        vertical-align: text-top;
+    }
 
     #times {
-        color: rgba(209, 232, 226, 1);
         color: rgba(134, 194, 50, 1);
         font-size: 28px;
         padding: 5px;
     }
 
-    #times:hover {
+    #times:hover,
+    #minimize:hover,
+    #enlarge:hover {
         cursor: pointer;
     }
 
-    #frame {
-        width: 512px;
-        height: 288px;
+    .frame-container #times.hd-4k {
+        position: absolute;
+        top: -13px;
+        right: -34px;
     }
+
+   
 
     #result-carousel {
-        background: rgba(17, 100, 102, 1);
-        background: rgba(44, 53, 49, 1);
-        background: rgba(107, 110, 112, 1);
-        overflow: hidden;
-        margin-top: 100px;
+        /*background: rgba(17, 100, 102, 1);*/
+        /*background: rgba(44, 53, 49, 1);*/
+        /*background: rgba(107, 110, 112, 1);*/
+        margin: 20px;
     }
 
-    #result-carousel div {
-        background: black;
-        display: inline-block;
-        overflow: hidden;
-        min-width: 320px;
+    div#result-carousel.responsive.hd_4k.slick-initialized.slick-slider.slick-dotted {
+        margin: 0;
     }
 
     label[for="result-carousel"] {
@@ -495,14 +608,39 @@ form.search-form.fixed-search-bar {
         display: block;
     }
 
+    /*.slick-slide:first-of-type {
+        padding-left: 10px;
+    }*/
+
+    .slick-list {
+        background: rgba(44, 53, 49, 0.7);
+        overflow: hidden;
+    }
+
+    .slick-track {
+        margin: 5px;
+        padding: 15px;
+    }
+
+    #lbox.frame-container.slick-track.hd_4k {
+        padding: 0;
+    }
+
     .slick-slide {
-        margin-top: 15px;
-        margin-right: 10px;
+        background: black;
+        display: inline-block;
+        overflow: hidden;
+        width: 320px;
+        height: 210px;
+        text-align: center;
+        margin: 0 12px;
+        padding: 3px;
     }
 
     .slick-slide:hover {
         /*box-shadow: 0 0 15px 8px rgba(0,0,100,0.6);*/
         box-shadow: 0 0 15px 8px rgba(134, 194, 50, 0.3);
+        box-shadow: 0 0 15px 8px rgba(71, 75, 79, 0.6);
         cursor: pointer;
         transition: all 0.2s ease;
     }
@@ -526,7 +664,8 @@ form.search-form.fixed-search-bar {
         height: 100px;
         background: rgba(159,173,115, 0.9);
         background: rgba(52, 81, 94, 1);
-        background: rgba(96, 125, 139, 0.9);
+        background: rgba(255, 74, 12, 1);
+        background: rgba(0, 178, 138, 1);
     }
 
     .footer-nav {
@@ -548,14 +687,16 @@ form.search-form.fixed-search-bar {
 
     .footer-nav li:hover {
         border-bottom: 2px solid white;
-        border-bottom-color: rgba(255,255,255,0.6);
+        border-bottom-color: rgba(255, 74, 12,0.6);
     }
 
     .footer-nav a {
-        color: black;
+        color: white;
         font-weight: bold;
         text-decoration: none;
     }
+    
+    
 }
 
 
