--- a/styles/main.css
+++ b/styles/main.css
@@ -56,9 +56,6 @@ header {
     color: rgba(64, 44, 38, 0.8);
 }
 
-.results div {
-    overflow: hidden;
-}
 
 #landing-container {
     max-width: 400px;
@@ -90,28 +87,231 @@ header {
     transition: all 0.5s ease;
 }
 
-#xplore-btn:hover {
+#explore-btn:hover {
     background: rgba(0, 178, 138, 0.8);
 }
 
+main {
+    background: url('../assets/DSC01398-Edit.jpg');
+    background-position-x: 80%;
+    background-position-y: 50%;
+    background-attachment: fixed;
+    position: relative;
+    float: left;
+    min-height: 100vh;
+    width: 100%;
+}
 
+.form-wrap {
+    background: transparent;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    padding-top: 40px;
+    box-shadow: 0 5px 10px transparent;
+    transition: all 1s ease;
+}
 
-/*form.search-form.form-backdrop {
+.form-backdrop {
     position: fixed;
     top: 0;
     left: 0;
     background: rgba(0,0,0,0.7);
     box-shadow: 0 5px 10px rgba(0,0,0,0.4);
     width: 100%;
-    height: 70px;
-    transition: all 0.8s ease;
+    height: 80px;
+    padding-top: 0;
+    transition: all 1s ease;
 }
 
-form.search-form.fixed-search-bar {
-    position: fixed;
-    padding-top: 10px;
-    transition: all 0.4s ease;
-}*/
+.filter span {
+    color: rgba(255, 74, 12, 0.9);
+}
+
+/* * * * *  Search Nav  * * * * */
+.search-nav {
+    position: relative;
+    display: inline-block;
+    margin-left: 30px;
+    transition: all 0.4s ease-in-out, color 0s;
+}
+
+.search-nav.fixed-search-bar {
+    position: relative;
+    transition: all 0.4s ease-in-out, color 0s;
+}
+
+#search-nav-burger {
+    font-size: 32px;
+}
+
+.search-dropdown-content {
+    display: none;
+    background: rgba(55, 71, 79, 0.9);
+    padding: 0;
+    margin: 0;
+    margin-top: 8px;
+    position: absolute;
+    top: 22px;
+    right: 0;
+}
+
+.search-dropdown-content.fixed {
+    /*margin-top: 20px;*/
+}
+
+.search-dropdown-content li {
+    list-style: none;
+    padding: 3px;
+    font-size: 24px;
+}
+
+browse-videos-span
+
+ .search-dropdown-content li:not(:last-of-type) {
+    border-bottom: 1px solid rgba(0,0,0,0.4);;
+}
+
+.search-dropdown-content a {
+    color: white;
+    display: block;
+    text-decoration: none;
+}
+
+.search-nav:hover {
+    color: rgba(255, 74, 12,1);
+    transition: color 0s ease;
+}
+
+.search-dropdown-content li:hover {
+    background: rgba(0, 178, 138, 0.8);
+}
+
+.search-dropdown-content > li:hover a {
+    /*color: rgba(255, 74, 12, 0.8);*/
+}
+
+.search-nav:hover .search-dropdown-content {
+    display: block;
+}
+
+#live-nav {
+    background: rgba(55, 71, 79, 0.9);
+    color: white;
+    display: none;
+    position: absolute;
+    left: 52%;
+    top: 100%;
+    padding: 0;
+}
+
+#live-nav li {
+    width: 100px;
+}
+
+.search-dropdown-content #live-list:hover #live-nav{
+    display: block;
+}
+
+
+/* * * * *  Results Page  * * * * */
+.results-container {
+    color: rgba(255, 74, 12, 0.9);
+    color: rgba(0, 178, 138, 0.8);
+}
+
+.results-filter {
+    background: rgba(0,0,0,0.8);
+    box-shadow: 0 0 20px 6px rgba(0,0,0,0.6)
+}
+
+.results div {
+    text-align: center;
+    width: 320px;
+    height: 250px;
+}
+
+.slide-label {
+    max-height: 70px;
+    overflow: hidden;
+}
+
+.page-controls-container {
+    clear: both;
+    text-align: center;
+    margin: 0 auto 10px;
+    background: rgba(0,0,0,0.8);
+    box-shadow: 0 0 20px 6px rgba(0,0,0,0.6);
+}
+
+#next-page-btn {
+    margin-left: 10px;
+}
+
+#prev-page-btn {
+    margin-right: 10px
+}
+
+#prev-page-btn.toggled {
+    color: rgba(255,255,255,0.3);
+}
+
+#prev-page-btn.toggled:hover {
+    cursor: default;
+}
+
+
+footer {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    background: rgba(159,173,115, 0.9);
+    background: rgba(52, 81, 94, 1);
+    background: rgba(255, 74, 12, 1);
+    background: rgba(0, 178, 138, 1);
+
+    text-align: center;
+}
+
+.footer-nav {
+    display: inline-block;
+    padding-left: 15px;
+    margin: 0;
+}
+
+.footer-nav li {
+    display: inline-block;
+    margin-right: 15px;
+    border-bottom: 2px solid transparent;
+    transition: all 200ms linear;
+}
+
+
+.footer-nav li:first-of-type {
+    margin-right: 50px;
+}
+
+.footer-nav li:hover {
+    border-bottom: 2px solid white;
+    border-bottom-color: rgba(255, 74, 12,0.6);
+}
+
+.footer-nav a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.copyright {
+    position: absolute;
+    display: block;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 12px;;
+}
+
 
 
 /*================================================================================/
@@ -166,54 +366,52 @@ form.search-form.fixed-search-bar {
 
     #landing-container {
         display: block;
-        /*height: 100vh;
-        text-align: center;
-        margin: 40vh auto 0;
-        font-size: 25px;*/
     }
 
 
-    #explore-btn:hover {
-        background: rgba(64, 44, 38, 0.9);
-    }
 
-    
-    
+
     /* * * * * * * Search Page (Mobile) * * * * * * */
-    main {
-        background: url('../assets/DSC01398-Edit.jpg');
-        background-position-x: 80%;
-        background-position-y: 50%;
-        /*background: url('../assets/teddy-kelley-70636.jpg');*/
-        background-attachment: fixed;
-        float: left;
-        height: 100vh;
-        width: 100%;
-    }
+    
 
-    .form-backdrop {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background: rgba(0,0,0,0.7);
-        box-shadow: 0 5px 10px rgba(0,0,0,0.4);
-        width: 100%;
-        height: 100px;
-        transition: all 0.8s ease;
-    }
 
     .search-form {
         width: 100%;
         margin: 0 auto;
         text-align: center;
-        padding-top: 10px;
     }
 
+    .search-nav.fixed-search-bar {
+        top: 10px;
+        right: 10%;
+    }
+
+    .search-dropdown-content {
+        margin-top: 15px;
+    }
+
+    .filter {
+        display: inline-block;
+        float: right;
+        margin-right: 20%;
+    }
+
+    .filter span {
+        display: block;
+        text-align: left;
+    }
+
+    label[for="hd-checkbox"] {
+        margin-right: 10px;
+    }
+
+
     #query-label {
-        position: absolute;
-        top: 65px;
-        left: 50%;
-        margin-left: -70px;
+        float: left;
+        max-width: 60%;
+        max-height: 70px;
+        overflow: hidden;
+        padding: 10px;
     }
 
     #query {
@@ -233,6 +431,25 @@ form.search-form.fixed-search-bar {
 
     #search-btn:hover {
         background: rgba(93, 64, 55, 1);
+    }
+
+    .results {
+        min-height: 100vh;
+    }
+
+
+    .results div {
+        display: block;
+        margin: 0 auto;
+    }
+
+    div.mobile-results-adjust {
+        margin-top: 106px
+    }
+
+    .video-thumbnail {
+        display: block;
+        margin: 5px auto;
     }
 
 }
@@ -289,39 +506,15 @@ form.search-form.fixed-search-bar {
 
     /* * * * * * * * * * * Search Page (Desktop) * * * * * * * */
 
-    main {
-        background: url('../assets/DSC01398-Edit.jpg');
-        /*background: url('../assets/teddy-kelley-70636.jpg');*/
-        background-attachment: fixed;
-        background-position-x: 80%;
-        background-position-y: 50%;
-        position: relative;
-        float: left;
-        height: 100%;
-        width: 100%;
-    }
-
-    .form-backdrop {
-        position: fixed;
-        top: 0;
-        left: 0;
-        background: rgba(0,0,0,0.7);
-        box-shadow: 0 5px 10px rgba(0,0,0,0.4);
-        width: 100%;
-        height: 80px;
-        transition: all 0.8s ease;
-    }
-
-
     .search-form {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
+        display: inline-block;
         width: 80%;
-        min-width: 700px;
-        padding: 40px;
-        text-align: center;
+        height: 80px;
+        float: left;
+        /*text-align: center;*/
+        padding-top: 13px;
+        transition: all 0.4s ease-in-out;
+        /*border: 1px solid white;*/
     }
 
     .filter {
@@ -333,30 +526,43 @@ form.search-form.fixed-search-bar {
         display: block;
     }
 
-    #browse-videos-span,
-    #search-results-span {
-        padding-left: 15px;
-        height: 80px;
-        line-height: 80px;
+    .browse-videos-span,
+    .search-results-span {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 3px;
+        max-width: 300px;
+        overflow: hidden;
+        /*height: 80px;
+        line-height: 80px;*/
     }
 
-    #search-results-span.hidden {
+    .lightbox .search-results-span, 
+    .lightbox .browse-videos-span {
+        position: relative;
+    }
+
+    .search-results-span.hidden {
         display: none;
     }
 
-    #browse-videos-span.hidden {
+    .browse-videos-span.hidden {
         display: none;
     }
 
     #query-label {
-        position: absolute;
-        top: 0;
-        left: 5px;
+        position: relative;
+        float: left;
         font-size: 24px;
-        width: 23%;
+        width: 20%;
+        max-width: 230px;
+        height: 80px;
+        text-align: center;
         /*border: 1px solid white;*/
         /*margin-top: 15px;*/
     }
+
 
     #query {
         width: 50%;
@@ -385,28 +591,32 @@ form.search-form.fixed-search-bar {
     }
 
     /* * * * * * Results (Desktop) * * * * * */
-    .results {
+    
+    .results-container {
         max-width: 1400px;
-        height: 100vh;
+        /*min-height: 100vh;*/
+        width: 700px;
         margin: 180px auto;
     }
-
-    .results div {
-        background: black;
-        display: inline-block;
+    
+    .results {
         float: left;
-        text-align: center;
-        width: 320px;
-        height: 180px;
-        margin-left: 1.5%;
-        margin-bottom: 10px;
+        padding-left: 15px;
+        padding-top: 20px;
     }
 
+    
+
     .results div {
+        float: left;
+        display: inline-block;
+        margin-left: 1.5%;
+        margin-bottom: 10px;
         transition: all 0.2s ease;
     }
 
-    .results div:hover {
+
+    .results div:hover .video-thumbnail {
         box-shadow: 0 0 20px 2px rgba(255,255,255,0.5);
     }
 
@@ -414,21 +624,9 @@ form.search-form.fixed-search-bar {
         max-height: 180px;
     }
 
-    .page-controls-container {
-        clear: both;
-
-        text-align: center;
-        margin-bottom: 10px;
+    .small-video-thumbnail {
+        max-height: 40px;
     }
-
-    #next-page-btn {
-        margin-left: 10px;
-    }
-
-    #prev-page-btn {
-        margin-right: 10px
-    }
-
 
     #next-page-btn:hover,
     #prev-page-btn:hover {
@@ -469,8 +667,9 @@ form.search-form.fixed-search-bar {
         top: 10px;
         left: 50%;
         transform: translateX(-50%);
-        width: 80%;
-        min-width: 945px;
+        /*width: 80%;*/
+        width: 945px;
+        /*max-width: 1040px;*/
         border: 2px solid rgba(107, 110, 112, 0.2);
         z-index: 2;
     }
@@ -593,6 +792,11 @@ form.search-form.fixed-search-bar {
         margin: 20px;
     }
 
+    #result-carousel.small-carousel {
+        margin: 0;
+        width: 80%;
+    }
+
     div#result-carousel.responsive.hd_4k.slick-initialized.slick-slider.slick-dotted {
         margin: 0;
     }
@@ -600,6 +804,8 @@ form.search-form.fixed-search-bar {
     label[for="result-carousel"] {
         display: block;
         width: 200px;
+        max-height: 60px;
+        overflow: hidden;
         text-align: center;
         margin: 0 auto;
     }
@@ -622,6 +828,10 @@ form.search-form.fixed-search-bar {
         padding: 15px;
     }
 
+    .small-slick-track {
+        padding: 0;
+    }
+
     #lbox.frame-container.slick-track.hd_4k {
         padding: 0;
     }
@@ -637,6 +847,11 @@ form.search-form.fixed-search-bar {
         padding: 3px;
     }
 
+    .small-slick-slide {
+        width: 190px;
+        height: 80px;
+    }
+
     .slick-slide:hover {
         /*box-shadow: 0 0 15px 8px rgba(0,0,100,0.6);*/
         box-shadow: 0 0 15px 8px rgba(134, 194, 50, 0.3);
@@ -644,8 +859,6 @@ form.search-form.fixed-search-bar {
         cursor: pointer;
         transition: all 0.2s ease;
     }
-
-    
 
     .slick-dots li.slick-active button:before {
         color: rgba(209, 232, 226, 1);
@@ -657,66 +870,56 @@ form.search-form.fixed-search-bar {
         font-size: 10px;
     }
 
-
-
-    footer {
-        width: 100%;
-        height: 100px;
-        background: rgba(159,173,115, 0.9);
-        background: rgba(52, 81, 94, 1);
-        background: rgba(255, 74, 12, 1);
-        background: rgba(0, 178, 138, 1);
-    }
-
-    .footer-nav {
-        max-width: 600px;
-        margin: 0 auto;
-    }
-
-    .footer-nav li {
-        display: inline-block;
-        margin-right: 15px;
-        border-bottom: 2px solid transparent;
-        transition: all 200ms linear;
+    .user-query::before, 
+    .user-query::after {
+        content: '"';
     }
 
 
     .footer-nav li:first-of-type {
         margin-right: 100px;
     }
+    
+    .fixed-search-bar,
+    #query-label {
+        /*padding-top: 10px;*/
+    }
+}
 
-    .footer-nav li:hover {
-        border-bottom: 2px solid white;
-        border-bottom-color: rgba(255, 74, 12,0.6);
+@media only screen and (min-width: 714px) {
+    .results-container,
+    .page-controls-container {
+        width: 700px;
+    }
+}
+
+@media only screen and (min-width: 1020px) {
+    .results-container,
+    .page-controls-container {
+        width: 1023px;
     }
 
-    .footer-nav a {
-        color: white;
-        font-weight: bold;
-        text-decoration: none;
+    .results {
+        padding-left: 0;
     }
-    
-    
+}
+
+@media only screen and (min-width: 1070px) {
+    .frame-container {
+        width: 1040px;
+    }
+}
+
+@media only screen and (min-width: 1380px) {
+    .results-container,
+    .page-controls-container {
+        width: 1380px;
+    }
 }
 
 
-/*.form-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: rgba(0,0,0,0.7);
-    box-shadow: 0 5px 10px rgba(0,0,0,0.4);
-    width: 100%;
-    height: 70px;
-    transition: all 0.8s ease;
-}*/
 
-.fixed-search-bar {
-    position: fixed;
-    top: 0;
-    padding-top: 10px;
-    transition: all 0.4s ease;
-}
+
 
 .hidden {
     display: none;
