--- a/styles/main.css
+++ b/styles/main.css
@@ -1060,6 +1060,7 @@ footer {
         left: 0;
         width: 100%;
         height: 100vh;
+        z-index: 10;
     }
 
     .frame-container {
